--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,7 @@
-spring.application.name=sqs-demo
-
+kafka.bootstrapAddress=kafka-server-1:29092
 server.port=8081
 
-kafka.bootstrapAddress=kafka-server:29092
-
-spring.datasource.url=jdbc:postgresql://postgres_kafka:5432/candidate
+spring.datasource.url=jdbc:postgresql://localhost:5432/candidate
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -15,4 +12,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 # for testing purposes
 spring.jpa.show-sql=false
+
 
