--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,9 +2,9 @@ spring.application.name=sqs-demo
 
 server.port=8081
 
-kafka.bootstrapAddress=kafka-server:29092
+kafka.bootstrapAddress=localhost:9092
 
-spring.datasource.url=jdbc:postgresql://postgres_kafka:5432/candidate
+spring.datasource.url=jdbc:postgresql://localhost:5432/candidate
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
